--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Book Project</title>
+  <title>Book Project - waves</title>
   <meta name="viewport" content="initial-scale=1">
   <link rel="stylesheet" href="./styles/style.css">
   <script type="text/javascript" src="./js/vendor/paper-full.min.js"></script>
