--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>All the places you'll go</title>
+  <title>all the places you'll go</title>
   <meta name="viewport" content="initial-scale=1">
   <link rel="stylesheet" href="./styles/style.css">
-  <script type="text/javascript" src="./js/vendor/paper-full.min.js">
-  </script>
+  <script type="text/javascript" src="./js/vendor/paper-full.min.js"></script>
+  <script type="text/paperscript" src="./js/wave.js" canvas="myCanvas"></script>
+</head>
+<body>
+  <canvas id="myCanvas" resize></canvas>
+</body>
+</html>
