titile + text-align

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <title>oh the places you'll go</title>
   <meta name="viewport" content="initial-scale=1">
   <link rel="stylesheet" href="./styles/style.css">
+  <h1>oh the places you'll go</h1>
   <script type="text/javascript" src="./js/vendor/paper-full.min.js"></script>
+
   <script type="text/paperscript" src="./js/wave.js" canvas="myCanvas"></script>
 </head>
 <body>
