title added, and asset folder

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
   <canvas id="myCanvas" resize></canvas>
+  <img src="Asset 1.svg" alt="Oh the places you'll go title" align="left">
+  <img src="Asset 2.svg" alt="Dr.Seuss" align="bottomRight">
 </body>
 </html>
