--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <canvas id="myCanvas" resize></canvas>
-  <img src="Asset 1.svg" alt="Oh the places you'll go title" align="left">
-  <img src="Asset 2.svg" alt="Dr.Seuss" align="bottomRight">
+  <img id="asset1" src="assets/Asset 1.svg" alt="Oh the places you'll go title" align="left">
+  <img id="asset2" src="assets/Asset 2.svg" alt="Dr.Seuss" align="bottomRight">
 </body>
 </html>
